--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Tasks App</string>
+    <string name="tasks">Tasks</string>
+    <string name="completed">Completed</string>
 </resources>
