--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">My Tasks App</string>
     <string name="tasks">Tasks</string>
     <string name="completed">Completed</string>
+    <string name="enter_task_title">Enter task title</string>
+    <string name="category">Category</string>
 </resources>
