--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="completed">Completed</string>
     <string name="enter_task_title">Enter task title</string>
     <string name="category">Category</string>
+    <string name="new_task">Новая задача</string>
 </resources>
